--- a/angular-curriculum/adder-subtractor/index.html
+++ b/angular-curriculum/adder-subtractor/index.html
@@ -11,16 +11,16 @@
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
           <h1>Add - Subtract - Multiply - Divide</h1>
-          <p class="lead">Enter two integers - then calculate!<p>
+          <p class="lead">Enter two numbers - then calculate!<p>
           <br>
           <form role="form" id="integerForm">
           <div class="row">
             <div class="col-md-4 col-md-offset-4">
               <div class="form-group">
-                <input type="number" class="form-control input-lg" id="value1" placeholder="Enter an integer ...">
+                <input type="number" class="form-control input-lg" id="value1" placeholder="Enter a float or an integer ...">
               </div>
               <div class="form-group">
-                <input type="number" class="form-control input-lg" id="value2" placeholder="Enter an integer ...">
+                <input type="number" class="form-control input-lg" id="value2" placeholder="Enter a float or an integer ...">
               </div>
             </div>
           </div>
