--- a/angular-curriculum/ngMadLibs/part2/index.html
+++ b/angular-curriculum/ngMadLibs/part2/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="">
+<html lang="en" ng-app="ngMadlibs" ng-controller="madlibsController">
   <head>
     <title>ngMadLibs</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
