--- a/angular-curriculum/multiplication-table/index.html
+++ b/angular-curriculum/multiplication-table/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Multiplication Table</title>
+  <link href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/yeti/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link href="css/main.css" rel="stylesheet" media="screen">
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.16/angular.min.js" type="text/javascript"></script>
 </head>
 <body>
@@ -10,9 +12,12 @@
     <input type="number" ng-model="numberLimit" placeholder="Enter a number">
     <table>
       <tr ng-repeat="numberA in numbers">
-        <td ng-repeat="numberB in numbers">
-          {{ compute(numberA, numberB) }}
-        </td>
+      <td ng-repeat="numberB in numbers"
+        ng-mouseleave="clearActiveFactors()"
+        ng-mouseover="setActiveFactors(numberA, numberB)"
+        ng-class="{hover: matchesFactor(numberA, numberB)}">
+        {{ compute(numberA, numberB) }}
+      </td>
       </tr>
     </table>
   </div>
