--- a/angular-curriculum/ngMadLibs/part3/index.html
+++ b/angular-curriculum/ngMadLibs/part3/index.html
@@ -20,9 +20,7 @@
           </div>
           <div id="inputs">
             <br>
-            <form role="form" ng-submit="add(name, menu)">
-              <h2>Please select a gender:</h2>
-              <select class="form-control dropdown" name="menu" ng-model="menu" ng-options="item.name for item in items"></select>
+            <form role="form" ng-submit="add(name)">
               <h2>Please provide the following words:</h2>
               <div class="row">
                 <div class="col-md-4">
