--- a/angular-curriculum/ngMadLibs/part3/index.html
+++ b/angular-curriculum/ngMadLibs/part3/index.html
@@ -66,7 +66,7 @@
                 </div>
               </div>
               <button type="submit" class="btn btn-primary" ng-disabled="madForm.$invalid">Submit</button>
-              <button type="reset" class="btn btn-success" id="reset-btn" ng-click="reset()">Reset?</button> 
+              <button type="button" class="btn btn-success" id="reset-btn" ng-click="reset()">Reset?</button> 
             </form>
           </div>
           <hr>
