--- a/frontend/shopping_list/index.html
+++ b/frontend/shopping_list/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Bootstrap 101 Template</title>
+    <title>My Shopping List</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="http://netdna.bootstrapcdn.com/bootswatch/3.1.1/yeti/bootstrap.min.css" rel="stylesheet" media="screen">
+    <link href="static/main.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
-      <h1>Hello, world!</h1>
+      <h1>My Shopping List</h1>
+      <br>
+      <h3>Add new item</h3>
+      <form class="form-inline" role="form">
+        <div class="form-group">
+          <input type="text" class="form-control" id="item-input" placeholder="enter item name">
+          &nbsp;
+          <input type="text" class="form-control" id="quantity-input" placeholder="quantity">
+          &nbsp;
+          <input type="number" class="form-control" id="price-input" placeholder="$0.00">
+          &nbsp;&nbsp;
+          <button type="submit" class="btn btn-primary">Add</button>
+        </div>
+      </form>
+      <br><hr><br>
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Item</th>
+            <th>Quantity</th>
+            <th>Unit Price</th>
+            <th>Total</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          </tr>
+        </tbody>
+      </table>
     </div>
     <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
