--- a/frontend/shopping_list/index.html
+++ b/frontend/shopping_list/index.html
@@ -8,12 +8,14 @@
   </head>
   <body>
     <div class="container">
+      <span class="glyphicon glyphicon-shopping-cart"></span>
       <h1>My Shopping List</h1>
       <br>
       <h3>Add new item</h3>
+      <br>
       <form class="form-inline" role="form">
         <div class="form-group">
-          <input type="text" class="form-control" id="item-input" placeholder="enter item name">
+          <input type="text" class="form-control" id="item-input" placeholder="enter the item name">
           &nbsp;
           <input type="text" class="form-control" id="quantity-input" placeholder="quantity">
           &nbsp;
