shopping list - added validation

--- a/frontend/shopping_list/index.html
+++ b/frontend/shopping_list/index.html
@@ -24,10 +24,12 @@
           <button type="button" class="btn btn-primary" id="add-btn">Add</button>
         </div>
       </form>
-      <br><hr><br>
+      <br>
+      <div id="alert"></div>
+      <hr><br>
       <table class="table">
         <thead>
-          <tr class="center-tag">
+          <tr>
             <th>Item</th>
             <th>Quantity</th>
             <th>Unit Price</th>
