added fadeout on success alert

--- a/frontend/shopping_list/index.html
+++ b/frontend/shopping_list/index.html
@@ -27,7 +27,7 @@
         </div>
       </form>
       <br>
-      <h4 id="alert"></h4>
+      <h4 id="alert"><br></h4>
       <br>
       <hr><br>
       <table class="table">
