updated shopping list: address scope issues

--- a/frontend/shopping_list/1-scope-issues/index.html
+++ b/frontend/shopping_list/1-scope-issues/index.html
@@ -18,11 +18,11 @@
       <br>
       <form class="form-inline" role="form">
         <div class="form-group">
-          <input type="text" class="form-control" id="item-input" placeholder="enter the item name" required>
+          <input type="text" class="form-control" id="item-input" placeholder="enter the item name">
           &nbsp;
-          <input type="text" class="form-control" id="quantity-input" placeholder="quantity" required>
+          <input type="text" class="form-control" id="quantity-input" placeholder="quantity">
           &nbsp;
-          <input type="text" class="form-control" id="price-input" placeholder="$0.00" required>
+          <input type="number" class="form-control" id="price-input" placeholder="$0.00">
         </div>
         &nbsp;&nbsp;
         <br><br>
@@ -48,7 +48,7 @@
               <th class="centered">Quantity</th>
               <th class="centered">Unit Price</th>
               <th class="centered">Total</th>
-              <th class="centered">Delete?</th>
+              <th></th>
             </tr>
           </thead>
           <tbody id="my-values">
