--- a/angular/waitstaff-calc/index.html
+++ b/angular/waitstaff-calc/index.html
@@ -19,7 +19,7 @@
         <div id="box" class="col-md-3 col-md-offset-1">
           <h2>Meal Details</h2>
           <br>
-          <form name="mealForm" ng-submit="validate(); submitted=true;" novalidate> 
+          <form name="mealForm" ng-submit="validate(); submitted=true;"> 
             <div class="form-group">
               <input class="form-input" type="number" placeholder="Enter the meal price ..." name="mealData.mealPrice" ng-model="mealData.mealPrice" min="0" required>
             </div>
@@ -32,8 +32,6 @@
             <input class="btn btn-default btn-sm" type="submit" value="Submit">
             <input class="btn btn-default btn-sm" type="button" value="Clear" ng-click="clear()"> 
             <br><br>        
-            <p class="error" ng-if="mealForm.$error.number && submitted">Please enter a valid number!</p>
-            <p class="error" ng-if="mealForm.$error.required && submitted">All fields are required!</p>
           </form>
           <br>
         </div>
